Fixed IDEA related issue, refined test